--- a/portfolio.html
+++ b/portfolio.html
@@ -24,13 +24,10 @@
     </header>
     <main>
         <section>
+            <!-- Iframe criado para visualização dos trabalhos anteriores -->
             <h2>Outros projetos</h2>
-                <!-- Parte do projeto em que irá redirecionar o usuário para os outros projetos do curso-->
-            <ul>
-                <li><a href="https://exemplo1.com">Projeto 1</a></li>
-                <li><a href="https://exemplo2.com">Projeto 2</a></li>
-                <li><a href="https://exemplo3.com">Projeto 3</a></li>
-            </ul>
+            <iframe src="Projeto_terminado.pdf" width="100%" height="500px"></iframe>
+            <iframe src="Trabalho-prog2.pdf" width="100%" height="500px"></iframe>
         </section>
     </main>
 </body>
